agregamos la excepcion al correo